Fix logged out pages for dark mode

--- a/assets/css/pages/_namer.scss
+++ b/assets/css/pages/_namer.scss
@@ -4,25 +4,25 @@
 
 .namer-example-txt {
   position: absolute;
-  top: 85px;
+  top: 75px;
   left: 12px;
   color: $black;
   font-weight: 600;
 
   @include media-breakpoint-up(md) {
-    top: 50px;
+    top: 44px;
     font-size: 12px;
     left: 6px;
   }
 
   @include media-breakpoint-up(lg) {
-    top: 70px;
+    top: 62px;
     font-size: 14px;
     left: 8px;
   }
 
   @include media-breakpoint-up(xl) {
-    top: 85px;
+    top: 80px;
     font-size: 16px;
     left: 12px;
   }
